convert to imperial

--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -258,26 +258,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            tavg  tmin  tmax  prcp   wdir       wspd     pres\n",
-      "Date                                                         \n",
-      "2016-07-30  19.8  15.6  25.0   0.0    NaN  11.200000  1014.10\n",
-      "2016-07-31  18.4  14.4  22.8   0.0    NaN   9.100000  1016.15\n",
-      "2016-08-01  18.0  12.8  25.0   0.0    NaN   6.900000  1018.20\n",
-      "2016-08-02  17.6  15.0  21.7   0.0    NaN   8.566667  1021.20\n",
-      "2016-08-03  19.2  15.6  23.9   0.0    NaN  10.233333  1024.20\n",
-      "...          ...   ...   ...   ...    ...        ...      ...\n",
-      "2022-04-05   7.6   4.0  12.0   0.8  172.0  14.700000  1025.30\n",
-      "2022-04-06   8.8   2.0  16.0   0.0    6.0   9.700000  1030.70\n",
-      "2022-04-07  14.3   7.0  22.0   0.0  354.0   7.700000  1021.40\n",
-      "2022-04-08  10.1   7.0  15.0  10.2  194.0  18.200000  1022.60\n",
-      "2022-04-09   6.4   3.0   9.0   6.4  159.0  12.100000  1024.60\n",
+      "             tavg   tmin   tmax  prcp   wdir       wspd     pres\n",
+      "Date                                                            \n",
+      "2016-07-30  67.64  60.08  77.00   0.0    NaN  11.200000  1014.10\n",
+      "2016-07-31  65.12  57.92  73.04   0.0    NaN   9.100000  1016.15\n",
+      "2016-08-01  64.40  55.04  77.00   0.0    NaN   6.900000  1018.20\n",
+      "2016-08-02  63.68  59.00  71.06   0.0    NaN   8.566667  1021.20\n",
+      "2016-08-03  66.56  60.08  75.02   0.0    NaN  10.233333  1024.20\n",
+      "...           ...    ...    ...   ...    ...        ...      ...\n",
+      "2022-04-05  45.68  39.20  53.60   0.8  172.0  14.700000  1025.30\n",
+      "2022-04-06  47.84  35.60  60.80   0.0    6.0   9.700000  1030.70\n",
+      "2022-04-07  57.74  44.60  71.60   0.0  354.0   7.700000  1021.40\n",
+      "2022-04-08  50.18  44.60  59.00  10.2  194.0  18.200000  1022.60\n",
+      "2022-04-09  43.52  37.40  48.20   6.4  159.0  12.100000  1024.60\n",
       "\n",
       "[2080 rows x 7 columns]\n",
       "<class 'str'>\n"
@@ -301,17 +301,17 @@
     "    if count > (length_df / 2):\n",
     "        del weather_df[value]\n",
     "\n",
-    "# # converting to imperial\n",
-    "# avg_temp_ser = weather_df[\"tavg\"].copy()\n",
-    "# min_temp_ser = weather_df[\"tmin\"].copy()\n",
-    "# max_temp_ser = weather_df[\"tmax\"].copy()\n",
-    "# for value in range(len(weather_df)):\n",
-    "#     avg_temp_ser[value] = utils.convert_temp(avg_temp_ser[value])\n",
-    "#     min_temp_ser[value] = utils.convert_temp(min_temp_ser[value])\n",
-    "#     max_temp_ser[value] = utils.convert_temp(max_temp_ser[value])\n",
-    "# weather_df[\"tavg\"] = avg_temp_ser\n",
-    "# weather_df[\"tmin\"] = min_temp_ser\n",
-    "# weather_df[\"tmax\"] = max_temp_ser\n",
+    "# converting to imperial\n",
+    "avg_temp_ser = weather_df[\"tavg\"].copy()\n",
+    "min_temp_ser = weather_df[\"tmin\"].copy()\n",
+    "max_temp_ser = weather_df[\"tmax\"].copy()\n",
+    "for value in range(len(weather_df)):\n",
+    "    avg_temp_ser[value] = utils.convert_temp(avg_temp_ser[value])\n",
+    "    min_temp_ser[value] = utils.convert_temp(min_temp_ser[value])\n",
+    "    max_temp_ser[value] = utils.convert_temp(max_temp_ser[value])\n",
+    "weather_df[\"tavg\"] = avg_temp_ser\n",
+    "weather_df[\"tmin\"] = min_temp_ser\n",
+    "weather_df[\"tmax\"] = max_temp_ser\n",
     "weather_df = weather_df.rename({\"date\": \"Date\"}, axis = \"columns\")\n",
     "\n",
     "weather_df.set_index(\"Date\", inplace=True)\n",
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -385,26 +385,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            tavg  tmin  tmax  prcp   wdir       wspd     pres Day of Week\n",
-      "Date                                                                     \n",
-      "2016-07-30  19.8  15.6  25.0   0.0    NaN  11.200000  1014.10    Saturday\n",
-      "2016-07-31  18.4  14.4  22.8   0.0    NaN   9.100000  1016.15      Sunday\n",
-      "2016-08-01  18.0  12.8  25.0   0.0    NaN   6.900000  1018.20      Monday\n",
-      "2016-08-02  17.6  15.0  21.7   0.0    NaN   8.566667  1021.20     Tuesday\n",
-      "2016-08-03  19.2  15.6  23.9   0.0    NaN  10.233333  1024.20   Wednesday\n",
-      "...          ...   ...   ...   ...    ...        ...      ...         ...\n",
-      "2022-04-05   7.6   4.0  12.0   0.8  172.0  14.700000  1025.30     Tuesday\n",
-      "2022-04-06   8.8   2.0  16.0   0.0    6.0   9.700000  1030.70   Wednesday\n",
-      "2022-04-07  14.3   7.0  22.0   0.0  354.0   7.700000  1021.40    Thursday\n",
-      "2022-04-08  10.1   7.0  15.0  10.2  194.0  18.200000  1022.60      Friday\n",
-      "2022-04-09   6.4   3.0   9.0   6.4  159.0  12.100000  1024.60    Saturday\n",
+      "             tavg   tmin   tmax  prcp   wdir       wspd     pres Day of Week\n",
+      "Date                                                                        \n",
+      "2016-07-30  67.64  60.08  77.00   0.0    NaN  11.200000  1014.10    Saturday\n",
+      "2016-07-31  65.12  57.92  73.04   0.0    NaN   9.100000  1016.15      Sunday\n",
+      "2016-08-01  64.40  55.04  77.00   0.0    NaN   6.900000  1018.20      Monday\n",
+      "2016-08-02  63.68  59.00  71.06   0.0    NaN   8.566667  1021.20     Tuesday\n",
+      "2016-08-03  66.56  60.08  75.02   0.0    NaN  10.233333  1024.20   Wednesday\n",
+      "...           ...    ...    ...   ...    ...        ...      ...         ...\n",
+      "2022-04-05  45.68  39.20  53.60   0.8  172.0  14.700000  1025.30     Tuesday\n",
+      "2022-04-06  47.84  35.60  60.80   0.0    6.0   9.700000  1030.70   Wednesday\n",
+      "2022-04-07  57.74  44.60  71.60   0.0  354.0   7.700000  1021.40    Thursday\n",
+      "2022-04-08  50.18  44.60  59.00  10.2  194.0  18.200000  1022.60      Friday\n",
+      "2022-04-09  43.52  37.40  48.20   6.4  159.0  12.100000  1024.60    Saturday\n",
       "\n",
       "[2080 rows x 8 columns]\n"
      ]
@@ -425,26 +425,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            tavg  tmin  tmax  prcp   wdir       wspd     pres Day of Week  \\\n",
-      "Date                                                                        \n",
-      "2016-07-30  19.8  15.6  25.0   0.0    NaN  11.200000  1014.10    Saturday   \n",
-      "2016-07-31  18.4  14.4  22.8   0.0    NaN   9.100000  1016.15      Sunday   \n",
-      "2016-08-01  18.0  12.8  25.0   0.0    NaN   6.900000  1018.20      Monday   \n",
-      "2016-08-02  17.6  15.0  21.7   0.0    NaN   8.566667  1021.20     Tuesday   \n",
-      "2016-08-03  19.2  15.6  23.9   0.0    NaN  10.233333  1024.20   Wednesday   \n",
-      "...          ...   ...   ...   ...    ...        ...      ...         ...   \n",
-      "2022-04-05   7.6   4.0  12.0   0.8  172.0  14.700000  1025.30     Tuesday   \n",
-      "2022-04-06   8.8   2.0  16.0   0.0    6.0   9.700000  1030.70   Wednesday   \n",
-      "2022-04-07  14.3   7.0  22.0   0.0  354.0   7.700000  1021.40    Thursday   \n",
-      "2022-04-08  10.1   7.0  15.0  10.2  194.0  18.200000  1022.60      Friday   \n",
-      "2022-04-09   6.4   3.0   9.0   6.4  159.0  12.100000  1024.60    Saturday   \n",
+      "             tavg   tmin   tmax  prcp   wdir       wspd     pres Day of Week  \\\n",
+      "Date                                                                           \n",
+      "2016-07-30  67.64  60.08  77.00   0.0    NaN  11.200000  1014.10    Saturday   \n",
+      "2016-07-31  65.12  57.92  73.04   0.0    NaN   9.100000  1016.15      Sunday   \n",
+      "2016-08-01  64.40  55.04  77.00   0.0    NaN   6.900000  1018.20      Monday   \n",
+      "2016-08-02  63.68  59.00  71.06   0.0    NaN   8.566667  1021.20     Tuesday   \n",
+      "2016-08-03  66.56  60.08  75.02   0.0    NaN  10.233333  1024.20   Wednesday   \n",
+      "...           ...    ...    ...   ...    ...        ...      ...         ...   \n",
+      "2022-04-05  45.68  39.20  53.60   0.8  172.0  14.700000  1025.30     Tuesday   \n",
+      "2022-04-06  47.84  35.60  60.80   0.0    6.0   9.700000  1030.70   Wednesday   \n",
+      "2022-04-07  57.74  44.60  71.60   0.0  354.0   7.700000  1021.40    Thursday   \n",
+      "2022-04-08  50.18  44.60  59.00  10.2  194.0  18.200000  1022.60      Friday   \n",
+      "2022-04-09  43.52  37.40  48.20   6.4  159.0  12.100000  1024.60    Saturday   \n",
       "\n",
       "            Things Watched  \n",
       "Date                        \n",
@@ -491,13 +491,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Visualizing the frequency of things watched per day\n",
+    "## Classifying whether the weather for a certain day was bad decent or good\n",
+    "Now we need an algorithm to signify whether or not the weather for a day was good bad or decent. This will allow me to distinguish if I tended to watch more when the weather was bad compared to when the weather was good. This will have to be decently arbritrary since it is really a matter of opinion if the weather is good or not for a certain day, so I will apply my own preferences to the weather since this is data collected on myself making it more or less accurate to my feelings or tendency to stay inside or be outside. Thus allowing us to see whether or not there is a correlation between these two attributes.\n",
+    "\n",
+    "### Deciding what is good bad or decent weather\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualizing the frequency of things watched per day\n",
     "This will allow me to see if I tended to watch more on certain days. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +516,7 @@
        "Text(0.5, 1.0, 'Days of the Week vs. Number of Things Watched')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -544,12 +554,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we can see that the diributio is decently normal. However the weekend does seem to be slightly larger. Lets graph the weekend (Friday, Saturday, Sunday) compared to weekdays (Monday, Tuesday, Wednesday, Thursday)"
+    "Here we can see that the diributio is decently normal. However the weekend does seem to be slightly larger. Lets graph the weekend (Friday, Saturday, Sunday) compared to weekdays (Monday, Tuesday, Wednesday, Thursday). ALthough we can also see that Saturday seems to have an unusually large frequency of things watched causing me to want to develop a hypothesis test to see if the frequency for Saturdays is significantly larger than, lets say, a Friday."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +576,7 @@
        "Text(0.5, 1.0, 'Weekend or Weekday vs. Number of Things Watched')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -606,6 +616,20 @@
     "plt.xlabel(\"Weekend or Weekday\")\n",
     "plt.ylabel(\"Number of things Watched\")\n",
     "plt.title(\"Weekend or Weekday vs. Number of Things Watched\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we can see that the Weekdays have a slightly higher frequency of things watched. However, this is the combonation of 4 different days in the week compared to my classification of the weekend with only 3 days. Hinting to the fact that the weekend despite having less days might have had a higher frequency on average. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hypothesis Testing \n"
    ]
   }
  ],
