--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -184,17 +184,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\georg\\AppData\\Local\\Temp/ipykernel_15496/3870878699.py:6: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  change_ser = pd.Series(list())\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -225,7 +217,7 @@
     "date_df[\"Day of Week\"] = date_df['Date'].dt.day_name()\n",
     "# change to string so I can compare easily\n",
     "\n",
-    "change_ser = pd.Series(list())\n",
+    "change_ser = pd.Series(list(string))\n",
     "\n",
     "for value in range(len(date_df[\"Date\"])):\n",
     "    temp = str(date_df[\"Date\"][value]).split(\" \")\n",
@@ -258,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
@@ -491,10 +483,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Classifying whether the weather for a certain day was bad decent or good\n",
+    "## Classifying whether the weather for a certain day was bad, decent, or good\n",
     "Now we need an algorithm to signify whether or not the weather for a day was good bad or decent. This will allow me to distinguish if I tended to watch more when the weather was bad compared to when the weather was good. This will have to be decently arbritrary since it is really a matter of opinion if the weather is good or not for a certain day, so I will apply my own preferences to the weather since this is data collected on myself making it more or less accurate to my feelings or tendency to stay inside or be outside. Thus allowing us to see whether or not there is a correlation between these two attributes.\n",
     "\n",
-    "### Deciding what is good bad or decent weather\n"
+    "### Deciding what is good, bad, or decent weather\n",
+    "For me personally, coming from Washington, I would probably classify anything above the temperature of 65 degrees with no rain pretty good weather. At least to the point I would like to be outside instead of rotting away as I tend to do watching Netflix. So, based on this opinion of mine I would probably classify any day above the temperature 65 without rain a \"good\" weather day while anything from around 50 to 65 without rain a \"decent\" weather day and anything below 50, especially with rain, to be a bad weather day. Now the issue here is the rain. I woul probably call anything below the temperature of 70 with rain to be a \"bad\" weather day. Meaning I would probably rather be inside than outside if the weather was like that. So this leaves us with these classifications of weather:\n",
+    "* Good Weather\n",
+    "    * `fully_merged_df[Date][tavg] > 65 && prcp < 1`\n",
+    "* Decent Weather \n",
+    "    * `fully_merged_df[Date][tavg] <= 65 && fully_merged_df[Date][tavg] > 50 && prcp < 1`\n",
+    "* Bad Weather \n",
+    "    * `fully_merged_df[Date][tavg] <=50 && prcp < 1`\n",
+    "    * `fully_merged_df[Date][tavg] < 70 && prcp > 1`\n",
+    "### Utilizing Algorithm to Develop new Column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0         good\n",
+      "1         good\n",
+      "2       decent\n",
+      "3       decent\n",
+      "4         good\n",
+      "         ...  \n",
+      "2075       bad\n",
+      "2076       bad\n",
+      "2077    decent\n",
+      "2078       bad\n",
+      "2079       bad\n",
+      "Length: 2038, dtype: object\n",
+      "             tavg   tmin   tmax  prcp   wdir       wspd     pres Day of Week  \\\n",
+      "Date                                                                           \n",
+      "2016-07-30  67.64  60.08  77.00   0.0    NaN  11.200000  1014.10    Saturday   \n",
+      "2016-07-31  65.12  57.92  73.04   0.0    NaN   9.100000  1016.15      Sunday   \n",
+      "2016-08-01  64.40  55.04  77.00   0.0    NaN   6.900000  1018.20      Monday   \n",
+      "2016-08-02  63.68  59.00  71.06   0.0    NaN   8.566667  1021.20     Tuesday   \n",
+      "2016-08-03  66.56  60.08  75.02   0.0    NaN  10.233333  1024.20   Wednesday   \n",
+      "...           ...    ...    ...   ...    ...        ...      ...         ...   \n",
+      "2022-04-05  45.68  39.20  53.60   0.8  172.0  14.700000  1025.30     Tuesday   \n",
+      "2022-04-06  47.84  35.60  60.80   0.0    6.0   9.700000  1030.70   Wednesday   \n",
+      "2022-04-07  57.74  44.60  71.60   0.0  354.0   7.700000  1021.40    Thursday   \n",
+      "2022-04-08  50.18  44.60  59.00  10.2  194.0  18.200000  1022.60      Friday   \n",
+      "2022-04-09  43.52  37.40  48.20   6.4  159.0  12.100000  1024.60    Saturday   \n",
+      "\n",
+      "            Things Watched Wthr Desc.  \n",
+      "Date                                   \n",
+      "2016-07-30             3.0        NaN  \n",
+      "2016-07-31             NaN        NaN  \n",
+      "2016-08-01             6.0        NaN  \n",
+      "2016-08-02             7.0        NaN  \n",
+      "2016-08-03             7.0        NaN  \n",
+      "...                    ...        ...  \n",
+      "2022-04-05             1.0        NaN  \n",
+      "2022-04-06             NaN        NaN  \n",
+      "2022-04-07             NaN        NaN  \n",
+      "2022-04-08             2.0        NaN  \n",
+      "2022-04-09             2.0        NaN  \n",
+      "\n",
+      "[2080 rows x 10 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "wthr_desc_df = pd.DataFrame(columns = [\"Date\", \"tavg\", \"prcp\"])\n",
+    "wthr_desc_df[\"Date\"] = fully_merged_df.index.tolist()\n",
+    "wthr_desc_df.set_index(\"Date\", inplace=True)\n",
+    "tavg_ser = fully_merged_df[\"tavg\"].copy()\n",
+    "wthr_desc_df[\"tavg\"] = tavg_ser\n",
+    "wthr_desc_df[\"prcp\"] = fully_merged_df[\"prcp\"]\n",
+    "wthr_desc_ser = pd.Series(string)\n",
+    "wthr_desc_df.reset_index()\n",
+    "for date in range(len(wthr_desc_df)):\n",
+    "    if wthr_desc_df[\"tavg\"][date] > 65 and wthr_desc_df[\"prcp\"][date] < 1:\n",
+    "        wthr_desc_ser[date] = \"good\"\n",
+    "    elif wthr_desc_df[\"tavg\"][date] <= 65 and wthr_desc_df[\"tavg\"][date] > 50 and wthr_desc_df[\"prcp\"][date] < 1:\n",
+    "        wthr_desc_ser[date] = \"decent\"\n",
+    "    elif wthr_desc_df[\"tavg\"][date] <= 50 and wthr_desc_df[\"prcp\"][date] < 1:\n",
+    "        wthr_desc_ser[date] = \"bad\"\n",
+    "    elif wthr_desc_df[\"tavg\"][date] <= 70 and wthr_desc_df[\"prcp\"][date] >= 2:\n",
+    "        wthr_desc_ser[date] = \"bad\"\n",
+    "print(wthr_desc_ser)\n",
+    "wthr_desc_df = wthr_desc_ser\n"
    ]
   },
   {
@@ -507,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +592,7 @@
        "Text(0.5, 1.0, 'Days of the Week vs. Number of Things Watched')"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -559,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +652,7 @@
        "Text(0.5, 1.0, 'Weekend or Weekday vs. Number of Things Watched')"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     },
