--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 439,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 440,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 441,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 442,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 443,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 444,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 445,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 446,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 447,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 448,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
        "Text(0.5, 1.0, 'Days of the Week vs. Number of Things Watched')"
       ]
      },
-     "execution_count": 395,
+     "execution_count": 448,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 449,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
        "Text(0.5, 1.0, 'Weekend or Weekday vs. Number of Things Watched')"
       ]
      },
-     "execution_count": 396,
+     "execution_count": 449,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 450,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
        "Text(0.5, 1.0, 'Description of the Weather vs. # of Things Watched')"
       ]
      },
-     "execution_count": 409,
+     "execution_count": 450,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -722,7 +722,154 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hypothesis Testing \n"
+    "## Hypothesis Testing \n",
+    "Based on the two previous visualizations I believe two different hypothesis test we could conduct would be to see if the average number of things watched for the weekend day is significantly higher than that of a weekday. Then another test we could conduct could be to see if the avergae number of things watched on a day classified with good weather is significantly lower than that of a day with decent or good weather."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Is the number of things watched on average for the day of the Saturday higher than that of a Weekday?\n",
+    "Using a significance level of .025 we are going to compute a two independent sample one tailed hypothesis test asking if the average number of things watched on a Saturday higher than that of a weekday?\n",
+    "##### Calculations\n",
+    "Identifying null and alternative Hypotheses:\n",
+    "* $H_{0} = \\mu_{Week} >= \\mu_{Saturday}$\n",
+    "* $H_{1} = \\mu_{Week} < \\mu_{Saturday}$\n",
+    "\n",
+    "Level of Significance:\n",
+    "* $\\alpha = .025$\n",
+    "\n",
+    "Test Statistic:\n",
+    "* will be using a t-test:\n",
+    "$$t = \\frac{\\overline{X}_{Week} - \\overline{X}_{Saturday}}{\\sqrt{S_p^2(\\frac{1}{n_{Week}})+(\\frac{1}{n_{Saturday}})}}$$\n",
+    "$$S_p^2 = \\frac{(n_{Week} - 1)s_{Week}^2 + (n_{Saturday} - 1)s_{Saturday}^2}{n_{Week} + n_{Saturday} - 2}$$\n",
+    "\n",
+    "Degrees Freedom:\n",
+    "* $df = n_{March} + n_{September} - 2$\n",
+    "\n",
+    "T-Critical:\n",
+    "* $t_{crit} = 1.960$\n",
+    "\n",
+    "Decision Rule:\n",
+    "* If the value of t is larger than that of $t_{crit}$ then wewill have enough evidence to reject the null hypothesis. Meaning that the average number of things Watched is higher on a Saturday than the average number of things watched on a weekday ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 469,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.997867347742732\n",
+      "3.081081081081081\n",
+      "t = 0.3361052126041639 pval = 0.36886798991950054\n",
+      "do not reject H0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy import stats\n",
+    "weekday_sums_list = [0] * 4\n",
+    "\n",
+    "for weekday in range(len(weekday_list)):\n",
+    "    temp_df = fully_merged_df.loc[fully_merged_df[\"Day of Week\"] == weekday_list[weekday]]\n",
+    "    weekday_sums_list[weekday] = temp_df[\"Things Watched\"].mean()\n",
+    "weekday_ser = pd.Series(weekday_sums_list)\n",
+    "print(weekday_ser.mean())\n",
+    "\n",
+    "saturday_df = fully_merged_df.loc[fully_merged_df[\"Day of Week\"] == \"Saturday\"]\n",
+    "saturday_ser = saturday_df[\"Things Watched\"] \n",
+    "print(saturday_ser.mean())\n",
+    "\n",
+    "t, pval = stats.ttest_ind(saturday_ser, weekday_ser, equal_var=False, nan_policy=\"omit\")\n",
+    "pval /= 2\n",
+    "alpha = .025\n",
+    "\n",
+    "print(\"t =\", t, \"pval =\", pval)\n",
+    "\n",
+    "if pval < alpha:\n",
+    "    print(\"reject H0\")\n",
+    "else:\n",
+    "    print(\"do not reject H0\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we can see that the means for things watched during the weekday and Saturday are very similar. To add on, this means that we cannot reject the null hypothesis that the mean of things watched during the week are greater than or equal to teh avergae nuber of things watched on a Saturday"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Is the number of things watched on average for the Weekend higher than that of a Weekday?\n",
+    "Using a significance level of .1 we are going to compute a two independent sample one tailed hypothesis test asking if the average number of things watched on the weekend higher than that of a weekday?\n",
+    "##### Calculations\n",
+    "Identifying null and alternative Hypotheses:\n",
+    "* $H_{0} = \\mu_{Week} >= \\mu_{Weekend}$\n",
+    "* $H_{1} = \\mu_{Week} < \\mu_{Weekend}$\n",
+    "\n",
+    "Level of Significance:\n",
+    "* $\\alpha = .1$\n",
+    "\n",
+    "Test Statistic:\n",
+    "* will be using a t-test:\n",
+    "$$t = \\frac{\\overline{X}_{Week} - \\overline{X}_{Weekend}}{\\sqrt{S_p^2(\\frac{1}{n_{Week}})+(\\frac{1}{n_{Weekend}})}}$$\n",
+    "$$S_p^2 = \\frac{(n_{Week} - 1)s_{Week}^2 + (n_{Weekend} - 1)s_{Weekend}^2}{n_{Week} + n_{Weekend} - 2}$$\n",
+    "\n",
+    "Degrees Freedom:\n",
+    "* $df = n_{March} + n_{September} - 2$\n",
+    "\n",
+    "T-Critical:\n",
+    "* $t_{crit} = 1.282$\n",
+    "\n",
+    "Decision Rule:\n",
+    "* If the value of t is larger than that of $t_{crit}$ then we will have enough evidence to reject the null hypothesis. Meaning that the average number of things Watched is higher on the Weekend than the average number of things watched on a weekday ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 468,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0255392753276555\n",
+      "t = 0.15419287531383877 pval = 0.44277230666282297\n",
+      "do not reject H0\n"
+     ]
+    }
+   ],
+   "source": [
+    "weekend_sums_list = [0] * 3\n",
+    "\n",
+    "for weekend in range(len(weekend_list)):\n",
+    "    temp_df = fully_merged_df.loc[fully_merged_df[\"Day of Week\"] == weekend_list[weekend]]\n",
+    "    weekend_sums_list[weekend] = temp_df[\"Things Watched\"].mean()\n",
+    "weekend_ser = pd.Series(weekend_sums_list)\n",
+    "print(weekend_ser.mean())\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "t, pval = stats.ttest_ind(weekend_ser, weekday_ser, equal_var=False, nan_policy=\"omit\")\n",
+    "pval /= 2\n",
+    "alpha = .1\n",
+    "\n",
+    "print(\"t =\", t, \"pval =\", pval)\n",
+    "\n",
+    "if pval < alpha:\n",
+    "    print(\"reject H0\")\n",
+    "else:\n",
+    "    print(\"do not reject H0\")"
    ]
   }
  ],
