change saturday test

--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -730,28 +730,28 @@
    "metadata": {},
    "source": [
     "### Is the number of things watched on average for the day of the Saturday higher than that of a Weekday?\n",
-    "Using a significance level of .025 we are going to compute a two independent sample one tailed hypothesis test asking if the average number of things watched on a Saturday higher than that of a weekday?\n",
+    "Using a significance level of .025 we are going to compute a two independent sample one tailed hypothesis test asking if the average number of things watched on a Saturday higher than that of any other day?\n",
     "##### Calculations\n",
     "Identifying null and alternative Hypotheses:\n",
-    "* $H_{0} = \\mu_{Week} >= \\mu_{Saturday}$\n",
-    "* $H_{1} = \\mu_{Week} < \\mu_{Saturday}$\n",
+    "* $H_{0} = \\mu_{Other} >= \\mu_{Saturday}$\n",
+    "* $H_{1} = \\mu_{Other} < \\mu_{Saturday}$\n",
     "\n",
     "Level of Significance:\n",
     "* $\\alpha = .025$\n",
     "\n",
     "Test Statistic:\n",
     "* will be using a t-test:\n",
-    "$$t = \\frac{\\overline{X}_{Week} - \\overline{X}_{Saturday}}{\\sqrt{S_p^2(\\frac{1}{n_{Week}})+(\\frac{1}{n_{Saturday}})}}$$\n",
-    "$$S_p^2 = \\frac{(n_{Week} - 1)s_{Week}^2 + (n_{Saturday} - 1)s_{Saturday}^2}{n_{Week} + n_{Saturday} - 2}$$\n",
+    "$$t = \\frac{\\overline{X}_{Other} - \\overline{X}_{Saturday}}{\\sqrt{S_p^2(\\frac{1}{n_{Other}})+(\\frac{1}{n_{Saturday}})}}$$\n",
+    "$$S_p^2 = \\frac{(n_{Other} - 1)s_{Other}^2 + (n_{Saturday} - 1)s_{Saturday}^2}{n_{Other} + n_{Saturday} - 2}$$\n",
     "\n",
     "Degrees Freedom:\n",
-    "* $df = n_{March} + n_{September} - 2$\n",
+    "* $df = n_{Other} + n_{Saturday} - 2$\n",
     "\n",
     "T-Critical:\n",
     "* $t_{crit} = 1.960$\n",
     "\n",
     "Decision Rule:\n",
-    "* If the value of t is larger than that of $t_{crit}$ then wewill have enough evidence to reject the null hypothesis. Meaning that the average number of things Watched is higher on a Saturday than the average number of things watched on a weekday ."
+    "* If the value of t is larger than that of $t_{crit}$ then wewill have enough evidence to reject the null hypothesis. Meaning that the average number of things Watched is higher on a Saturday than the average number of things watched on any other day ."
    ]
   },
   {
@@ -772,10 +772,10 @@
    ],
    "source": [
     "from scipy import stats\n",
-    "weekday_sums_list = [0] * 5\n",
-    "\n",
-    "for weekday in range(len(weekday_list)):\n",
-    "    temp_df = fully_merged_df.loc[fully_merged_df[\"Day of Week\"] == weekday_list[weekday]]\n",
+    "weekday_sums_list = [0] * 6\n",
+    "other_days_list = [\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Sunday\"]\n",
+    "for weekday in range(len(other_days_list)):\n",
+    "    temp_df = fully_merged_df.loc[fully_merged_df[\"Day of Week\"] == other_days_list[weekday]]\n",
     "    weekday_sums_list[weekday] = temp_df[\"Things Watched\"].mean()\n",
     "weekday_ser = pd.Series(weekday_sums_list)\n",
     "print(weekday_ser.mean())\n",
