--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -1002,9 +1002,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 638,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bad weather mean: 2.6808510638297873\n",
+      "Good Weather mean: 3.2876404494382023\n",
+      "t = 3.6959877485614268 pval = 0.00011693187743918454\n",
+      "reject H0\n"
+     ]
+    }
+   ],
    "source": [
     "bad_df = fully_merged_df.loc[fully_merged_df[\"Wthr Desc.\"] == \"bad\"]\n",
     "good_df = fully_merged_df.loc[fully_merged_df[\"Wthr Desc.\"] == \"good\"]\n",
