--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Is there a corelation between the weather or the days of the week and how much I tend to watch on Netflix?"
+    "# Exploratory Data Analysis:\n",
+    "## Is there a corelation between the weather or the days of the week and how much I tend to watch on Netflix?"
    ]
   },
   {
