--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -12,20 +12,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we are going to analyze my Netflix viewing history from a downloaded csv file that lists the title of what I watched and the date of when I watched it. Combingin this with local weather data from an API and the days of the week will allow me to test if:\n",
+    "Here we are going to analyze my Netflix viewing history from a downloaded csv file that lists the title of what I watched and the date of when I watched it. Combining this with local weather data from an API and the days of the week will allow me to test if:\n",
     "\n",
     "* I tend to watch more on the weekends\n",
-    "* Watch more when the weather is poor (ie. raining heavily)\n",
+    "* Watch more when the weather is good or bad\n",
+    "* Anything else I might find\n",
     "\n",
-    "To test this I will do a hypothesis test of the frequency of things watched on Saturdays and Sundays ( ie. my classification of the weekend) compared to how much I watched in the week (ie. Monday-Friday)\n"
+    "To test this I will do a hypothesis test of the frequency of things watched on Saturdays and Sundays ( ie. my classification of the weekend) compared to how much I watched in the week (ie. Monday-Friday).\n",
+    "To add on I will develop a algorithm to predict how many things I watched when given an unseen instance.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To do these test and combine these separate pieces of data. But, we first need to set up APIs to get the weather from certain days and the days of the week. \n",
-    "Since the first instance from the NEtflix Viewing history csv file is dated \"7/30/16\" we need to import weather data and the days of the week from \"7/30/16\" to the last recorded day in the viewing hisotry file which is \"4/9/2022\".\n",
+    "To do these tests we need to combine these separate sets of data. To do this we first need to set up the API to get the weather from certain days and the days of the week. \n",
+    "Since the first instance from the Netflix Viewing history csv file is dated \"7/30/16\" we need to import weather data and the days of the week from \"7/30/16\" to the last recorded day in the viewing history file which is \"4/9/2022\".\n",
     ">NOTE: for the weather I am going to just use the weather data from the Sammamish, WA area (where I live) since for the most part I watch netflix at home."
    ]
   },
@@ -33,15 +35,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Code to import all of the data\n",
+    "### Code to import all of the data\n",
+    "I will be using the APi that we previously used for DA4. Slightly modifying it so that the dates correspond to the Netflix Viewing history csv file.\n",
     "##### Importing the Weather\n",
-    "Getting the longitude and latitude for Sammamish.\n",
-    "This will allow me to use a spearate API to get the closest weather station ID to Sammamish"
+    "Step 1 to using the Weather API is to get the longitude and latitude of Sammamish, Washington. This is because this API finds the closest Weather station based on those coordinates "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 622,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 623,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -118,12 +120,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now finally here we are loading the weather collected from this weather station from during the time period of 7/30/16 to 4/9/2022:"
+    "Now finally here we are loading the weather data collected from this weather station during the time period of 7/30/16 to 4/9/2022:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 624,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -179,14 +181,22 @@
    "source": [
     "##### Importing the days of the week:\n",
     "Next we need to load in the days of the week from 2016-07-30 through to 2022-04-09.\n",
-    "To do this we are using the datetime library to create a dataframe with the dates within this parameter and then the corresponding day of the week\n"
+    "To do this we are using the datetime library to create a series with the dates within this parameter and then the corresponding day of the week. This seires will then be added to the end of the weather dataframe that was created previously\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 625,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\georg\\AppData\\Local\\Temp/ipykernel_6320/3870878699.py:6: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "  change_ser = pd.Series(list())\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -217,7 +227,7 @@
     "date_df[\"Day of Week\"] = date_df['Date'].dt.day_name()\n",
     "# change to string so I can compare easily\n",
     "\n",
-    "change_ser = pd.Series(list(string))\n",
+    "change_ser = pd.Series(list())\n",
     "\n",
     "for value in range(len(date_df[\"Date\"])):\n",
     "    temp = str(date_df[\"Date\"][value]).split(\" \")\n",
@@ -236,7 +246,7 @@
    "metadata": {},
    "source": [
     "## Cleaning the data\n",
-    "Now that we have loaded all of the data we need to clean the files in order to accurately compute data and make hypotheses"
+    "Now that we have loaded all of the data we need to create hypothesis tests and an algorithm, we need to clean the files in order to accurately do said things."
    ]
   },
   {
@@ -244,35 +254,33 @@
    "metadata": {},
    "source": [
     "#### Cleaning the Weather DataFrame\n",
-    "First we are going to clean the weather dataframe.\n",
-    "Converting the temperatures to farenheit and then deleting the columns with more than 50 percent of teh values missing"
+    "First we are going to clean the weather dataframe. We will be converting the temperatures to farenheit, deleting the columns with more than 50 percent of the values missing, and then removing any rows with any NaNs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 626,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             tavg   tmin   tmax  prcp   wdir       wspd     pres\n",
+      "            index     tavg     tmin     tmax  prcp  wspd    pres\n",
       "Date                                                            \n",
-      "2016-07-30  67.64  60.08  77.00   0.0    NaN  11.200000  1014.10\n",
-      "2016-07-31  65.12  57.92  73.04   0.0    NaN   9.100000  1016.15\n",
-      "2016-08-01  64.40  55.04  77.00   0.0    NaN   6.900000  1018.20\n",
-      "2016-08-02  63.68  59.00  71.06   0.0    NaN   8.566667  1021.20\n",
-      "2016-08-03  66.56  60.08  75.02   0.0    NaN  10.233333  1024.20\n",
-      "...           ...    ...    ...   ...    ...        ...      ...\n",
-      "2022-04-05  45.68  39.20  53.60   0.8  172.0  14.700000  1025.30\n",
-      "2022-04-06  47.84  35.60  60.80   0.0    6.0   9.700000  1030.70\n",
-      "2022-04-07  57.74  44.60  71.60   0.0  354.0   7.700000  1021.40\n",
-      "2022-04-08  50.18  44.60  59.00  10.2  194.0  18.200000  1022.60\n",
-      "2022-04-09  43.52  37.40  48.20   6.4  159.0  12.100000  1024.60\n",
+      "2016-07-30      0  3621.04  3363.85  3939.40   0.0  11.2  1014.1\n",
+      "2016-08-01      2  3510.95  3192.51  3939.40   0.0   6.9  1018.2\n",
+      "2016-08-04      5  3694.51  3259.90  4043.57   0.0  11.9  1017.6\n",
+      "2016-08-05      6  3669.96  3290.59  4043.57   0.0   8.4  1013.4\n",
+      "2016-08-08      9  3480.26  3290.59  3768.01   0.3   6.6  1015.1\n",
+      "...           ...      ...      ...      ...   ...   ...     ...\n",
+      "2022-04-05   2075  2874.13  2653.81  3143.53   0.8  14.7  1025.3\n",
+      "2022-04-06   2076  2947.60  2531.26  3388.41   0.0   9.7  1030.7\n",
+      "2022-04-07   2077  3284.31  2837.37  3755.70   0.0   7.7  1021.4\n",
+      "2022-04-08   2078  3027.18  2837.37  3327.24  10.2  18.2  1022.6\n",
+      "2022-04-09   2079  2800.76  2592.57  2959.92   6.4  12.1  1024.6\n",
       "\n",
-      "[2080 rows x 7 columns]\n",
-      "<class 'str'>\n"
+      "[1060 rows x 7 columns]\n"
      ]
     }
    ],
@@ -283,16 +291,13 @@
     "length_df = len(weather_df)\n",
     "for value in weather_df:\n",
     "    ser = weather_df[value].copy()\n",
-    "    for i in range(len(ser)):\n",
-    "        # if col is something you can interpolate\n",
-    "        if(value == \"tavg\", \"tmin\", \"tmax\", \"prcp\", \"wdir\", \"wspd\", \"pres\" and ser.isnull()):\n",
-    "            ser.interpolate(inplace = True)\n",
     "    weather_df[value] = ser\n",
     "    # removing columns with more than 50 percent of values missing\n",
     "    count = weather_df[value].isnull().sum()\n",
     "    if count > (length_df / 2):\n",
     "        del weather_df[value]\n",
-    "\n",
+    "weather_df.dropna(inplace=True)\n",
+    "weather_df.reset_index(inplace=True)\n",
     "# converting to imperial\n",
     "avg_temp_ser = weather_df[\"tavg\"].copy()\n",
     "min_temp_ser = weather_df[\"tmin\"].copy()\n",
@@ -309,7 +314,6 @@
     "weather_df.set_index(\"Date\", inplace=True)\n",
     "print(weather_df)\n",
     "\n",
-    "print(type(weather_df.index[0]))\n",
     "weather_df.to_csv(\"cleaned_daily_weather.csv\")\n"
    ]
   },
@@ -319,12 +323,12 @@
    "source": [
     "#### Cleaning the Date Column of the Netflix Dataframe\n",
     "This will be converting the dates in this colunn from the format `4/9/22` to `2022-04-09`.\n",
-    "This will allow us the combine the other two data sets easily."
+    "This will allow us the combine the other two data sets easily snce they are both in this format."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 627,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -377,28 +381,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 628,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             tavg   tmin   tmax  prcp   wdir       wspd     pres Day of Week\n",
-      "Date                                                                        \n",
-      "2016-07-30  67.64  60.08  77.00   0.0    NaN  11.200000  1014.10    Saturday\n",
-      "2016-07-31  65.12  57.92  73.04   0.0    NaN   9.100000  1016.15      Sunday\n",
-      "2016-08-01  64.40  55.04  77.00   0.0    NaN   6.900000  1018.20      Monday\n",
-      "2016-08-02  63.68  59.00  71.06   0.0    NaN   8.566667  1021.20     Tuesday\n",
-      "2016-08-03  66.56  60.08  75.02   0.0    NaN  10.233333  1024.20   Wednesday\n",
-      "...           ...    ...    ...   ...    ...        ...      ...         ...\n",
-      "2022-04-05  45.68  39.20  53.60   0.8  172.0  14.700000  1025.30     Tuesday\n",
-      "2022-04-06  47.84  35.60  60.80   0.0    6.0   9.700000  1030.70   Wednesday\n",
-      "2022-04-07  57.74  44.60  71.60   0.0  354.0   7.700000  1021.40    Thursday\n",
-      "2022-04-08  50.18  44.60  59.00  10.2  194.0  18.200000  1022.60      Friday\n",
-      "2022-04-09  43.52  37.40  48.20   6.4  159.0  12.100000  1024.60    Saturday\n",
+      "            index    tavg    tmin    tmax  prcp  wspd    pres Day of Week\n",
+      "Date                                                                     \n",
+      "2016-07-30      0  153.75  140.14  170.60   0.0  11.2  1014.1    Saturday\n",
+      "2016-08-01      2  147.92  131.07  170.60   0.0   6.9  1018.2      Monday\n",
+      "2016-08-04      5  157.64  134.64  176.11   0.0  11.9  1017.6    Thursday\n",
+      "2016-08-05      6  156.34  136.26  176.11   0.0   8.4  1013.4      Friday\n",
+      "2016-08-08      9  146.30  136.26  161.53   0.3   6.6  1015.1      Monday\n",
+      "...           ...     ...     ...     ...   ...   ...     ...         ...\n",
+      "2022-04-05   2075  114.22  102.56  128.48   0.8  14.7  1025.3     Tuesday\n",
+      "2022-04-06   2076  118.11   96.08  141.44   0.0   9.7  1030.7   Wednesday\n",
+      "2022-04-07   2077  135.93  112.28  160.88   0.0   7.7  1021.4    Thursday\n",
+      "2022-04-08   2078  122.32  112.28  138.20  10.2  18.2  1022.6      Friday\n",
+      "2022-04-09   2079  110.34   99.32  118.76   6.4  12.1  1024.6    Saturday\n",
       "\n",
-      "[2080 rows x 8 columns]\n"
+      "[1060 rows x 8 columns]\n"
      ]
     }
    ],
@@ -417,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 629,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 630,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 631,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +555,7 @@
        "Text(0.5, 1.0, 'Days of the Week vs. Number of Things Watched')"
       ]
      },
-     "execution_count": 631,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -601,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 632,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +614,7 @@
        "Text(0.5, 1.0, 'Days of the Week vs. Average Number of Things Watched')"
       ]
      },
-     "execution_count": 632,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -644,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 633,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +665,7 @@
        "Text(0.5, 1.0, 'Weekend or Weekday vs. Number of Things Watched')"
       ]
      },
-     "execution_count": 633,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -720,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 634,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +733,7 @@
        "Text(0.5, 1.0, 'Description of the Weather vs. # of Things Watched')"
       ]
      },
-     "execution_count": 634,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -762,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 635,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +775,7 @@
        "Text(0.5, 1.0, 'Description of the Weather vs. Average # of Things Watched')"
       ]
      },
-     "execution_count": 635,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -847,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 636,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 637,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 638,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
