need to change each hypotest to 1 sample dependent

--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -862,7 +862,12 @@
    "metadata": {},
    "source": [
     "## Hypothesis Testing \n",
-    "Based on the two previous visualizations I believe two different hypothesis test we could conduct would be to see if the average number of things watched for the weekend day is significantly higher than that of a weekday. Then another test we could conduct could be to see if the avergae number of things watched on a day classified with good weather is significantly lower than that of a day with decent or good weather."
+    "Based on the visualizations of the data I have gathered on myself I believe some hypothesis tests we should conduct include teh comparisons:\n",
+    "* Saturdays average # number of things watched compared to the other days of the week \n",
+    "* The average number of things watched during the week and then the Weekend\n",
+    "* The average number of things watched on a good weather day compared to a bad one \n",
+    "\n",
+    "Now each of these test will be a dependent one sample test of the means since the number of things watched is dependent on the day of the week and then the weather. Plus, they are one sample tests since the data has been collected on only my own Netflix Viewing history."
    ]
   },
   {
