Done with hypos

--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -1149,7 +1149,7 @@
    "metadata": {},
    "source": [
     "### Is the number of things watched on a day classified with good weather greater than that classified with bad weather?\n",
-    "Using a significance level of .01 we are going to compute a two independent sample one tailed hypothesis test asking if the average number of things watched on the good weather day higher than that of a bad weather day?\n",
+    "Using a significance level of .01 we are going to do a 2 sample dependent test comparing the mean number of things watched on the weekend higher then the weekday. However, the number of bad days and and the number of good days  will be unequal. So to combat this we are going to only use the first 100 values from the larger dataset.\n",
     "##### Calculations\n",
     "Identifying null and alternative Hypotheses:\n",
     "* $H_{0} = \\mu_{bad} >= \\mu_{good}$\n",
@@ -1160,14 +1160,13 @@
     "\n",
     "Test Statistic:\n",
     "* will be using a t-test:\n",
-    "$$t = \\frac{\\overline{X}_{bad} - \\overline{X}_{good}}{\\sqrt{S_p^2(\\frac{1}{n_{bad}})+(\\frac{1}{n_{good}})}}$$\n",
-    "$$S_p^2 = \\frac{(n_{bad} - 1)s_{bad}^2 + (n_{good} - 1)s_{good}^2}{n_{bad} + n_{good} - 2}$$\n",
+    "$$t = \\frac{\\overline{d} - \\mu_{d}}{s_{\\overline{d}}}$$\n",
     "\n",
     "Degrees Freedom:\n",
-    "* $df = n_{good} + n_{bad} - 2$\n",
+    "* $df = 100 - 1 = 99 $\n",
     "\n",
     "T-Critical:\n",
-    "* $t_{crit} = 2.33$\n",
+    "* $t_{crit} = 2.576 $\n",
     "\n",
     "Decision Rule:\n",
     "* If the value of t is larger than that of $t_{crit}$ then we will have enough evidence to reject the null hypothesis. Meaning that the average number of things watched is higher on the good days than the average number of things watched on a bad day."
@@ -1175,30 +1174,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 461,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bad weather mean: 1.1224340175953078\n",
-      "Good Weather mean: 1.3156424581005586\n",
-      "t = 1.8720608536518801 pval = 0.030716298777843477\n",
-      "do not reject H0\n"
+      "Bad weather mean: 0.47\n",
+      "Good Weather mean: 1.36\n",
+      "t = 2.7568424454873797 pval = 0.0034748777761727198\n",
+      "reject H0\n"
      ]
     }
    ],
    "source": [
     "bad_df = fully_merged_df.loc[fully_merged_df[\"Wthr Desc.\"] == \"bad\"]\n",
     "good_df = fully_merged_df.loc[fully_merged_df[\"Wthr Desc.\"] == \"good\"]\n",
-    "bad_ser = bad_df[\"Things Watched\"]\n",
-    "good_ser = good_df[\"Things Watched\"]\n",
+    "bad_ser = bad_df[\"Things Watched\"].iloc[0:100].copy()\n",
+    "good_ser = good_df[\"Things Watched\"].iloc[0:100].copy()\n",
     "\n",
     "print(\"Bad weather mean:\", bad_ser.mean())\n",
     "print(\"Good Weather mean:\", good_ser.mean())\n",
     "\n",
-    "t, pval = stats.ttest_ind(good_ser, bad_ser, equal_var=False, nan_policy=\"omit\")\n",
+    "t, pval = stats.ttest_rel(good_ser,bad_ser,nan_policy=\"omit\")\n",
     "\n",
     "pval /= 2\n",
     "alpha = .01\n",
