--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 543,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 544,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 545,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 546,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 547,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 548,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 549,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": 550,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 521,
+   "execution_count": 551,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 552,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": 553,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
        "Text(0.5, 1.0, 'Days of the Week vs. Number of Things Watched')"
       ]
      },
-     "execution_count": 523,
+     "execution_count": 553,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": 554,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
        "Text(0.5, 1.0, 'Days of the Week vs. Average Number of Things Watched')"
       ]
      },
-     "execution_count": 524,
+     "execution_count": 554,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 555,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
        "Text(0.5, 1.0, 'Weekend or Weekday vs. Number of Things Watched')"
       ]
      },
-     "execution_count": 525,
+     "execution_count": 555,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 556,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
        "Text(0.5, 1.0, 'Month vs. Average')"
       ]
      },
-     "execution_count": 526,
+     "execution_count": 556,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 557,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
        "Text(0.5, 1.0, 'Description of the Weather vs. # of Things Watched')"
       ]
      },
-     "execution_count": 527,
+     "execution_count": 557,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 558,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +922,7 @@
        "Text(0.5, 1.0, 'Description of the Weather vs. Average # of Things Watched')"
       ]
      },
-     "execution_count": 528,
+     "execution_count": 558,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
+   "execution_count": 559,
    "metadata": {},
    "outputs": [
     {
@@ -1011,8 +1011,6 @@
      "text": [
       "Saturday mean = 1.1491228070175439\n",
       "Otherday mean = 1.6754385964912282\n",
-      "114\n",
-      "114\n",
       "t = -1.630398132678674 pval = 0.05290084409070053\n",
       "do not reject H0\n"
      ]
@@ -1088,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 560,
    "metadata": {},
    "outputs": [
     {
@@ -1178,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 561,
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
+   "execution_count": 562,
    "metadata": {},
    "outputs": [
     {
@@ -1293,8 +1291,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Predicting Things Watched:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 540,
+   "execution_count": 563,
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1331,99 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we can see that the KNN model that we developed is 50 percent accurate in predicting the amount of things watched during any given day."
+    "Predicitng Day of the Week:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 567,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy =  0.1180327868852459\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = fully_merged_df.drop(\"Day of Week\", axis = 1)\n",
+    "y = fully_merged_df[\"Day of Week\"].copy()\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=0)\n",
+    "\n",
+    "\n",
+    "knn_clf = KNeighborsClassifier(n_neighbors=3, metric=\"euclidean\")\n",
+    "knn_clf.fit(X_train, y_train)\n",
+    "\n",
+    "accuracy = knn_clf.score(X_test, y_test) \n",
+    "print(\"accuracy = \", accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Predicitng Month:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 569,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy =  0.2983606557377049\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = fully_merged_df.drop(\"Month\", axis = 1)\n",
+    "y = fully_merged_df[\"Month\"].copy()\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=0)\n",
+    "\n",
+    "\n",
+    "knn_clf = KNeighborsClassifier(n_neighbors=3, metric=\"euclidean\")\n",
+    "knn_clf.fit(X_train, y_train)\n",
+    "\n",
+    "accuracy = knn_clf.score(X_test, y_test) \n",
+    "print(\"accuracy = \", accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Predicitng Weather Description:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 570,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy =  0.9672131147540983\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = fully_merged_df.drop(\"Wthr Desc.\", axis = 1)\n",
+    "y = fully_merged_df[\"Wthr Desc.\"].copy()\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=0)\n",
+    "\n",
+    "\n",
+    "knn_clf = KNeighborsClassifier(n_neighbors=3, metric=\"euclidean\")\n",
+    "knn_clf.fit(X_train, y_train)\n",
+    "\n",
+    "accuracy = knn_clf.score(X_test, y_test) \n",
+    "print(\"accuracy = \", accuracy)"
    ]
   },
   {
@@ -1338,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 566,
    "metadata": {},
    "outputs": [
     {
@@ -1368,7 +1465,7 @@
        " Text(1046.25, 135.89999999999998, 'gini = 0.683\\nsamples = 61\\nvalue = [32, 9, 6, 4, 3, 2, 3, 1, 0, 0, 1, 0, 0, 0\\n0]')]"
       ]
      },
-     "execution_count": 542,
+     "execution_count": 566,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1389,6 +1486,9 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.tree import plot_tree\n",
     "\n",
+    "X = fully_merged_df.drop(\"Things Watched\", axis = 1)\n",
+    "y = fully_merged_df[\"Things Watched\"].copy()\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=0)\n",
     "tree_clf = DecisionTreeClassifier(random_state=0, max_depth=3)\n",
     "tree_clf.fit(X_train, y_train)\n",
     "y_predicted = tree_clf.predict(X_test)\n",
